our team : k17 info + more button

--- a/index.html
+++ b/index.html
@@ -560,7 +560,10 @@
 
                         </div>
                         </div>        
-                    </div>     
+                    </div>
+                      <div class="row">
+                        <button class="button team-button">More</button>
+                      </div>    
                 </div>
             </section>
             <section class="footer">
