About slideshow size adjustment

--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@
             <section id="video" class="content-section">
                 <div class="contact-content">
                     <div class="section-heading">
-                        <h1>About <em>Us</em></h1>  <hr>
+                        <h1>About <em>Us</em></h1>  <hr></div>
 
-                        <div class="col-lg-10 col-lg-offset-1 container">
+                        <div class="col-lg-18">
   
                           <div id="myCarousel" class="carousel slide" data-ride="carousel">
                             <!-- Indicators -->
@@ -400,7 +400,7 @@
                           </div>
                         </div>
                         
-                    </div>
+                </div>
 
             </section>
             <section id="contact" class="content-section">
