updated the photos

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                               </div>
                             
                               <div class="item">
-                                <img src="img/about/4.jpg" style="width:100%;">
+                                <img src="img/about/4.JPG" style="width:100%;">
                               </div>
                             </div>
                         
