--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
 
                             <div class="col-lg-2 col-md-6 wow fadeInUp">
                               <div class="member">
-                                <img src="img/bg-img/team/aditya.jpeg" class="img-fluid" alt="" style="width: 100%;">
+                                <img src="img/bg-img/team/aditya.jpg" class="img-fluid" alt="" style="width: 100%;">
                                 <div class="member-info">
                                   <div class="member-info-content">
                                     <h4>Aditya Raj Singh</h4>
