--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                         <div class="row">
                             <div class="col-lg-2 col-lg-offset-1 col-md-6 wow fadeInUp">
                               <div class="member">
-                                <img src="img/bg-img/team/ankitanshu.jpeg" class="img-fluid" alt="" style="width: 100%;">
+                                <img src="img/bg-img/team/ankitanshu.jpg" class="img-fluid" alt="" style="width: 100%;">
                                 <div class="member-info">
                                   <div class="member-info-content">
                                     <h4>Ankitanshu Swaroop</h4>
@@ -484,7 +484,7 @@
                             </div>
                             <div class="col-lg-2 col-md-6 wow fadeInUp">
                               <div class="member">
-                                <img src="img/bg-img/team/saurabh.jpeg" class="img-fluid" alt="" style="width: 100%;">
+                                <img src="img/bg-img/team/saurabh.jpg" class="img-fluid" alt="" style="width: 100%;">
                                 <div class="member-info">
                                   <div class="member-info-content">
                                     <h4>Saurav Sah</h4>
@@ -550,7 +550,7 @@
                             </div>
                             <div class="col-lg-2 col-md-6 wow fadeInUp">
                               <div class="member">
-                                <img src="img/bg-img/team/ashish.jpeg" class="img-fluid" alt="" style="width: 100%;">
+                                <img src="img/bg-img/team/ashish.jpg" class="img-fluid" alt="" style="width: 100%;">
                                 <div class="member-info">
                                   <div class="member-info-content">
                                     <h4>Ashish Kumar</h4>
