--- a/index.html
+++ b/index.html
@@ -506,7 +506,8 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          
+                        </div>
                         
                         <div class="row">    
                             <div class="col-lg-2 col-md-6 col-xs-6 wow fadeInUp">
@@ -613,9 +614,9 @@
                         </div>        
                     </div>
 
-                    <div class="row" style = "padding-bottom: 40px; padding-top: 30px">
+                    <div style = "padding-bottom: 30px; padding-top: 30px">
                         <p>
-                          <button class="btn btn-lg col-lg-4 col-lg-offset-4 team-button" type="button" data-toggle="collapse" data-target="#k18about" aria-expanded="true" aria-controls="k18about">
+                          <button class="btn btn-lg  team-button" type="button" data-toggle="collapse" data-target="#k18about" aria-expanded="true" aria-controls="k18about">
                             More
                           </button>
                         </p>
@@ -835,7 +836,7 @@
                                     <a href="https://www.linkedin.com/in/atmaram-patra-0159b4143/" target="_blank"><i class="fa fa-linkedin"></i></a>                                      
                                     <a href="https://www.facebook.com/smart.atmaram" target="_blank"><i class="fa fa-facebook"></i></a>
                                     <a href="https://www.instagram.com/pixel_studio.psd/" target="_blank"><i class="fa fa-instagram"></i></a>
-                                    <a href="https://twitter.com/PatraAtmaram" target="_blank" ><i class="fa fa-twitter"></i></a>
+                                    <a href="https://www.behance.net/atmaram07" target="_blank" ><i class="fa fa-behance"></i></a>
                                     <a href="https://atmarampatra.live" target="_blank" ><i class="fa fa-globe"></i></a>
                                   </div>
                                 </div>
