Faculty Advisor About

--- a/index.html
+++ b/index.html
@@ -425,8 +425,19 @@
                     </div>
                     <div class="section-content">
                         <div class="team">
-                        <div class="row">
-                            <div class="col-lg-2 col-lg-offset-1 col-md-6 col-xs-6 wow fadeInUp">
+                          <div class="row">
+                            <div class="col-lg-2 col-md-6 col-xs-6 wow fadeInUp">
+                              <div class="member">
+                                <img src="img/bg-img/team/priyank.jpg" class="img-fluid" alt="" style="width: 100%;">
+                                <div class="member-info">
+                                  <div class="member-info-content">
+                                    <h4>Dr. Priyank Saxena</h4>
+                                    <span>Faculty Advisor</span>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col-lg-2 col-md-6 col-xs-6 wow fadeInUp">
                               <div class="member">
                                 <img src="img/bg-img/team/ankitanshu.jpg" class="img-fluid" alt="" style="width: 100%;">
                                 <div class="member-info">
