Faculty Advisor photo and row change

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                     <div class="section-content">
                         <div class="team">
                           <div class="row">
-                            <div class="col-lg-2 col-md-6 col-xs-6 wow fadeInUp">
+                            <div class="col-lg-2 col-lg-offset-5 col-md-6 col-xs-6 wow fadeInUp">
                               <div class="member">
                                 <img src="img/bg-img/team/priyank.jpg" class="img-fluid" alt="" style="width: 100%;">
                                 <div class="member-info">
@@ -437,7 +437,9 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col-lg-2 col-md-6 col-xs-6 wow fadeInUp">
+                            </div>
+                            <div class="row">
+                            <div class="col-lg-2 col-lg-offset-1 col-md-6 col-xs-6 wow fadeInUp">
                               <div class="member">
                                 <img src="img/bg-img/team/ankitanshu.jpg" class="img-fluid" alt="" style="width: 100%;">
                                 <div class="member-info">
