--- a/index.html
+++ b/index.html
@@ -627,15 +627,8 @@
                         </div>        
                     </div>
 
-                    <div style = "padding-bottom: 30px; padding-top: 30px">
-                        <p>
-                          <button class="btn btn-lg  team-button" type="button" data-toggle="collapse" data-target="#k18about" aria-expanded="true" aria-controls="k18about">
-                            More
-                          </button>
-                        </p>
-                    </div>
                     <div class = row>  
-                        <div class="collapse" id="k18about">
+                        <div  id="k18about">
                           <div class="col-lg-2 col-md-6 col-xs-6 wow fadeInUp">
                             <div class="member">
                               <img src="img/bg-img/team/uttam.jpg" class="img-fluid" alt="" style="width: 100%;">
