--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 
 
         <header class="nav-down responsive-nav hidden-lg hidden-md">
+          <a class="navbar-brand" href="index.html">
+            <img src="img/core-img/psoc white.png";  alt = "logo"; style="height: 55px; margin-top: -20%; margin-left:0% ;">
+          </a>
+          
             <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
