--- a/index.html
+++ b/index.html
@@ -410,6 +410,11 @@
 
                           </div>
                       </div>
+                      <div class="item">
+                        <div class="image">
+                            <img src="img/featured/3.jpg" alt="">
+
+                        </div>
                     </div>
 
                   </div>
