--- a/index.html
+++ b/index.html
@@ -389,7 +389,8 @@
 
               </div>
               <div class="section-content">
-                  <div class="owl-carousel owl-theme">
+                  <div class="owl-carousel">
+                    
                       <div class="item">
                           <div class="image">
                               <img src="img/featured/1.jpg" alt="">
@@ -415,7 +416,7 @@
                             <img src="img/featured/3.jpg" alt="">
 
                         </div>
-                    </div>
+                      </div>
 
                   </div>
               </div>
