--- a/index.html
+++ b/index.html
@@ -654,6 +654,7 @@
                                   <span>General Secretary</span>
                                   <div class="social">
                                     <a href="https://twitter.com/clowneryace" target="_blank"><i class="fa fa-twitter"></i></a>
+                                    <a href="https://www.linkedin.com/in/tanmay-gupta-941a651b4/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                     <a href="https://www.facebook.com/thewhackrack" target="_blank"><i class="fa fa-facebook"></i></a>
                                     <a href="https://www.instagram.com/x.xxtanmaycion/" target="_blank"><i class="fa fa-instagram"></i></a>
                                   </div>
