--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                       </div>
                       <div class="item">
                           <div class="image">
-                              <img src="img/featured/4.jpeg" alt="">
+                              <img src="img/featured/4.jpg" alt="">
 
                           </div>
 
