--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
 
             <!--/.navbar-header-->
@@ -51,6 +52,7 @@
                         <li><a href="#projects">Gallery</a></li>
                         <li><a href="#blog">Workshop and Tutorials</a></li>
                         <li><a href="#featured">Featured Photos</a></li>
+                        <li><a href="#form">Forms</a></li>
                         <li><a href="#contact">Our Team</a></li>
                     </ul>
                 </nav>
@@ -99,6 +101,13 @@
                           <span class="rect"></span>
                           <span class="circle"></span>
                           Featured Photos
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#form">
+                        <span class ="rect"></span>
+                        <span class ="circle"></span>
+                        Forms 
                       </a>
                     </li>
                     <li>
@@ -416,6 +425,35 @@
                   </div>
               </div>
           </section>
+
+         
+        
+          <section id="form" class="content-section">
+
+            <div id="contact-content">
+
+                <div class="section-heading">
+
+                  <h1 style="padding-left: 60px;">FORM <em>Team</em></h1>  <hr>
+                </div>
+            </div>
+          </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
           <section id="contact" class="content-section">
 
                 <div id="contact-content">
