--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="u-container-layout u-container-layout-1">
                   <div class="u-palette-4-dark-2 u-shape u-shape-circle u-shape-1"></div>
                   <h2 class="u-text u-text-1">About</h2>
-                  <p class="u-text u-text-2"> The Photographic Society (PSoc) holds the distinction to be one of the oldest student’s bodies of BIT, Mesra with its foundation dating back to 1964. Every year, more than 40 students are being inducted into the club after workshops, hands-on coverage, and guidance. The principal objective of the club is to promote the art and science of photography and video making among the students of BIT Mesra and help them develop their skills in this field. Our team comprises five different sub-teams namely coverage team, graphic design team, video team, and lastly, the web development team. One can reach us using the following URL ​https://psocbitmesra.github.io/</p>
+                  <p class="u-text u-text-2"> The Photographic Society (PSoc) holds the distinction to be one of the oldest student’s bodies of BIT, Mesra with its foundation dating back to 1964. Every year, more than 40 students are being inducted into the club after workshops, hands-on coverage, and guidance. The principal objective of the club is to promote the art and science of photography and video making among the students of BIT Mesra and help them develop their skills in this field. Our team comprises five different sub-teams namely coverage team, graphic design team, video team, and lastly, the web development team.</p>
                 </div>
               </div>
               <div class="u-container-style u-hidden-sm u-hidden-xs u-layout-cell u-right-cell u-size-26 u-layout-cell-2">
