--- a/Team.html
+++ b/Team.html
@@ -202,7 +202,7 @@
             </div>
             <div class="spk-info">
               <h3>Anik Sarkar</h3>
-              <p>Digital photography</p>
+              <p>Joint President</p>
             </div>
           </div>
         </div>
