--- a/Team.html
+++ b/Team.html
@@ -102,6 +102,8 @@
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Team.html" style="padding: 10px 0px;">Team</a>
                 </li>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Events.html" style="padding: 10px 0px;">Events</a>
+                </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Gallery.html" style="padding: 10px 0px;">Gallery</a>
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html" style="padding: 10px 0px;">Contact</a>
@@ -150,10 +152,12 @@
             </div>
           </div>
         </div>
+
         <!-- /col end-->
 
         <!-- /col end-->
       </div>
+
       <!-- /row end-->
       <!-- 2 -->
       <div class="row mb50">
@@ -202,7 +206,7 @@
             </div>
             <div class="spk-info">
               <h3>Anik Sarkar</h3>
-              <p>Joint President</p>
+              <p>Digital photography</p>
             </div>
           </div>
         </div>
@@ -226,7 +230,7 @@
             </div>
             <div class="spk-info">
               <h3>Niharika Verma</h3>
-              <p>Vice Presidents</p>
+              <p>Vice President</p>
             </div>
           </div>
         </div>
@@ -249,7 +253,7 @@
             </div>
             <div class="spk-info">
               <h3>Akhil Padha</h3>
-              <p>Vice Presidents</p>
+              <p>Vice President</p>
             </div>
           </div>
         </div>
@@ -730,6 +734,26 @@
             <div class="spk-info">
               <h3>Mohit Raj</h3>
               <p>Event Leads</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12">
+          <div class="speakers xs-mb30">
+            <div class="spk-img">
+              <img class="img-fluid" src="images/DILIP KR SINGH.jpg" alt="trainer-img" />
+              <ul>
+                <li>
+                  <a href="mailto:dilipsinghnano1@gmail.com" title="Email"><i class="fa fa-envelope"></i></a>
+                </li>
+                <li>
+                  <a href="tel:+91 8130610762" title="phone"><i class="fa fa-telephone"></i></a>
+                </li>
+
+              </ul>
+            </div>
+            <div class="spk-info">
+              <h3>Dilip Singh</h3>
+              <!-- <p>President</p> -->
             </div>
           </div>
         </div>
