--- a/Gallery.html
+++ b/Gallery.html
@@ -42,7 +42,7 @@
 <body class="u-body u-image">
   <header class="u-clearfix u-header u-palette-4-dark-3 u-sticky u-sticky-2c9d u-header" id="sec-37ba">
     <div class="u-clearfix u-sheet u-valign-top-lg u-valign-top-md u-sheet-1">
-      <a href="index.html" class="u-image u-logo u-image-1" data-image-width="1202" data-image-height="1200">
+      <a href="Home.html" class="u-image u-logo u-image-1" data-image-width="1202" data-image-height="1200">
         <img src="images/psocwhite.png" class="u-logo-image u-logo-image-1">
       </a>
       <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
