--- a/Events.html
+++ b/Events.html
@@ -45,7 +45,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <header class="u-clearfix u-header u-palette-4-dark-3 u-sticky u-sticky-2c9d u-header" id="sec-37ba">
     <div class="u-clearfix u-sheet u-valign-top-lg u-valign-top-md u-sheet-1">
-      <a href="index.html" class="u-image u-logo u-image-1" data-image-width="1202" data-image-height="1200">
+      <a href="Home.html" class="u-image u-logo u-image-1" data-image-width="1202" data-image-height="1200">
         <img src="images/psocwhite.png" class="u-logo-image u-logo-image-1">
       </a>
       <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -77,8 +77,8 @@
                 style="padding: 10px 0px;">Team</a>
             </li>
             <li class="u-nav-item"><a
-                class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base u-text-white" href="Events.html"
-                style="padding: 10px 0px;">Events</a>
+                class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base u-text-white"
+                href="Events.html" style="padding: 10px 0px;">Events</a>
             </li>
             <li class="u-nav-item"><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base u-text-white"
@@ -319,6 +319,8 @@
     </div>
   </div>
 
+
+
   <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-80" id="sec-641e">
     <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
       <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
@@ -403,9 +405,15 @@
       margin-top: 0px;
       margin-bottom: 0px;
     }
-    .container{
+
+    footer {
+      top: 470px;
+    }
+
+    .container {
       margin-top: 10px;
     }
+
     .end_date {
       margin-left: auto;
     }
