--- a/Home.html
+++ b/Home.html
@@ -87,6 +87,10 @@
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base u-text-white"
                 href="Contact.html" style="padding: 10px 0px;">Contact</a>
             </li>
+            <li class="u-nav-item"><a
+                class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base u-text-white"
+                href="report.html" style="padding: 10px 0px;">Reports</a>
+            </li>
           </ul>
         </div>
         <div class="u-custom-menu u-nav-container-collapse">
@@ -105,6 +109,8 @@
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Gallery.html" style="padding: 10px 0px;">Gallery</a>
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html" style="padding: 10px 0px;">Contact</a>
+                </li>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="report.html" style="padding: 10px 0px;">Reports</a>
                 </li>
               </ul>
             </div>
