--- a/events_card_widget.html
+++ b/events_card_widget.html
@@ -14,38 +14,13 @@
   <link rel="stylesheet" href="Home.css" media="screen">
   <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="script.js" defer=""></script>
-  <link rel="icon" href="images/favicon.png">
-  <script type="application/ld+json">
-    {
-      "@context": "http://schema.org",
-      "@type": "Organization",
-      "name": "psoc k19 website",
-      "logo": "images/psocwhite.png",
-      "sameAs": [
-        "https://www.facebook.com/psocbitm/",
-        "https://instagram.com/psoc.bitm?utm_source=ig_profile_share&igshid=1s0tkjhjpm0hc",
-        "https://instagram.com/psoc.bitm?utm_source=ig_profile_share&igshid=1s0tkjhjpm0hc",
-        "https://www.linkedin.com/company/photographic-society-bit-mesra/",
-        "mailto:psoc@bitmesra.ac.in"
-      ]
-    }
-  </script>
-  <meta name="theme-color" content="#478ac9">
-  <meta property="og:title" content="Team">
-  <meta property="og:description" content="">
-  <meta property="og:type" content="website">
-  <link rel="icon" href="images/favicon.png">
-
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <header class="u-clearfix u-header u-palette-4-dark-3 u-sticky u-sticky-2c9d u-header" id="sec-37ba">
     <div class="u-clearfix u-sheet u-valign-top-lg u-valign-top-md u-sheet-1">
-      <a href="Home.html" class="u-image u-logo u-image-1" data-image-width="1202" data-image-height="1200">
+      <a href="index.html" class="u-image u-logo u-image-1" data-image-width="1202" data-image-height="1200">
         <img src="images/psocwhite.png" class="u-logo-image u-logo-image-1">
       </a>
       <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -78,19 +53,11 @@
             </li>
             <li class="u-nav-item"><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base u-text-white"
-                href="Events.html" style="padding: 10px 0px;">Events</a>
-            </li>
-            <li class="u-nav-item"><a
-                class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base u-text-white"
                 href="Gallery.html" style="padding: 10px 0px;">Gallery</a>
             </li>
             <li class="u-nav-item"><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base u-text-white"
                 href="Contact.html" style="padding: 10px 0px;">Contact</a>
-            </li>
-            <li class="u-nav-item"><a
-                class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base u-text-white"
-                href="report.html" style="padding: 10px 0px;">Reports</a>
             </li>
           </ul>
         </div>
@@ -108,8 +75,6 @@
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Gallery.html" style="padding: 10px 0px;">Gallery</a>
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html" style="padding: 10px 0px;">Contact</a>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="report.html" style="padding: 10px 0px;">Reports</a>
                 </li>
               </ul>
             </div>
@@ -325,8 +290,6 @@
     </div>
   </div>
 
-
-
   <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-80" id="sec-641e">
     <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
       <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
@@ -411,15 +374,9 @@
       margin-top: 0px;
       margin-bottom: 0px;
     }
-
-    footer {
-      top: 470px;
-    }
-
-    .container {
+    .container{
       margin-top: 10px;
     }
-
     .end_date {
       margin-left: auto;
     }
