--- a/report.html
+++ b/report.html
@@ -40,7 +40,7 @@
 <body class="u-body u-image">
   <header class="u-clearfix u-header u-palette-4-dark-3 u-sticky u-sticky-2c9d u-header" id="sec-37ba">
     <div class="u-clearfix u-sheet u-valign-top-lg u-valign-top-md u-sheet-1">
-      <a href="Home.html" class="u-image u-logo u-image-1" data-image-width="1202" data-image-height="1200">
+      <a href="index.html" class="u-image u-logo u-image-1" data-image-width="1202" data-image-height="1200">
         <img src="images/psocwhite.png" class="u-logo-image u-logo-image-1">
       </a>
       <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -64,8 +64,8 @@
         <div class="u-custom-menu u-nav-container">
           <ul class="u-nav u-spacing-30 u-unstyled u-nav-1">
             <li class="u-nav-item"><a
-                class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base u-text-white" href="Home.html"
-                style="padding: 10px 0px;">Home</a>
+                class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base u-text-white"
+                href="index.html" style="padding: 10px 0px;">Home</a>
             </li>
             <li class="u-nav-item"><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base u-text-white" href="Team.html"
@@ -94,7 +94,7 @@
             <div class="u-sidenav-overflow">
               <div class="u-menu-close"></div>
               <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 0px;">Home</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html" style="padding: 10px 0px;">Home</a>
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Team.html" style="padding: 10px 0px;">Team</a>
                 </li>
@@ -114,6 +114,15 @@
       </nav>
     </div>
   </header>
+
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
 
 
 
